--- a/02_loop_list_tuple_set_dictionary/0201lt_sarasai.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0201lt_sarasai.ipynb
@@ -216,10 +216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['vistiena', 'zuvis', 'pica', 'salotos', 'cepelinai']\n"
+     ]
+    }
+   ],
+   "source": [
+    "maistas = [\"vistiena\", \"zuvis\", \"pica\", \"salotos\", \"cepelinai\"]\n",
+    "print(maistas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -323,10 +334,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apelsinai\n",
+      "abrikosai\n",
+      "['persimonai', 'citrina']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vaisiai = [\"mandarinai\", \"apelsinai\", \"persimonai\", \"citrina\", \"abrikosai\"]\n",
+    "print(vaisiai[1])\n",
+    "print(vaisiai[-1])\n",
+    "print(vaisiai[2:4])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -576,14 +602,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['obuolys', 'kriaušė', 'bananas']\n",
+      "['apelsinas', 'lotosas']\n",
+      "['kriaušė', 'bananas', 'apelsinas']\n",
+      "['obuolys', 'bananas', 'lotosas']\n"
+     ]
+    }
+   ],
    "source": [
     "# Vaisių sąrašas\n",
     "fruits = ['obuolys', 'kriaušė', 'bananas', 'apelsinas', 'lotosas']\n",
     "\n",
-    "# Jūsų kodas čia"
+    "# Jūsų kodas čia\n",
+    "#1\n",
+    "print(fruits[:3])\n",
+    "#2\n",
+    "print(fruits[-2:])\n",
+    "#3\n",
+    "print(fruits[1:4])\n",
+    "#4\n",
+    "print(fruits[::2])"
    ]
   },
   {
@@ -999,14 +1044,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['pizza', 'sushi', 'burgeris', 'makaronai', 'ledai', 'kebabas']\n",
+      "['pizza', 'sushi', 'burgeris', 'makaronai', 'zuvis', 'ledai', 'kebabas']\n",
+      "['pizza', 'kebabas', 'burgeris', 'makaronai', 'zuvis', 'ledai', 'kebabas']\n",
+      "['kebabas', 'burgeris', 'makaronai', 'zuvis', 'ledai', 'kebabas']\n",
+      "['kebabas', 'makaronai', 'zuvis', 'ledai', 'kebabas']\n",
+      "3\n",
+      "['kebabas', 'ledai', 'zuvis', 'makaronai', 'kebabas']\n",
+      "['kebabas', 'ledai', 'makaronai', 'kebabas']\n",
+      "is saraso ['kebabas', 'ledai', 'makaronai', 'kebabas'] istraukeme zuvis\n"
+     ]
+    }
+   ],
    "source": [
     "# Duotas mėgstamų maisto pavadinimų sąrašas\n",
     "favorite_foods = ['pizza', 'sushi', 'burgeris', 'makaronai', 'ledai']\n",
     "\n",
-    "# Jūsų kodas čia"
+    "# Jūsų kodas čia\n",
+    "#1\n",
+    "favorite_foods.append(\"kebabas\")\n",
+    "print(favorite_foods)\n",
+    "#2\n",
+    "favorite_foods.insert(4, \"zuvis\")\n",
+    "print(favorite_foods)\n",
+    "#3\n",
+    "favorite_foods[1] = \"kebabas\"\n",
+    "print(favorite_foods)\n",
+    "#4\n",
+    "favorite_foods.remove(\"pizza\")\n",
+    "print(favorite_foods)\n",
+    "#5\n",
+    "favorite_foods.remove(\"burgeris\")\n",
+    "print(favorite_foods)\n",
+    "#6\n",
+    "index_of_2 = favorite_foods.index(\"ledai\")\n",
+    "print(index_of_2)\n",
+    "#7\n",
+    "favorite_foods.reverse()\n",
+    "print(favorite_foods)\n",
+    "#8\n",
+    "popped_element = favorite_foods.pop(2)\n",
+    "print(favorite_foods)\n",
+    "print(f\"is saraso {favorite_foods} istraukeme {popped_element}\")"
    ]
   },
   {
@@ -1061,14 +1147,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 vaisiu rusys yra sarase\n"
+     ]
+    }
+   ],
    "source": [
     "# Duotas vaisių sąrašas\n",
     "fruits = [\"obuolys\", \"bananas\", \"vyšnia\", \"datulė\", \"svarainis\"]\n",
     "\n",
-    "# Jūsų kodas čia"
+    "# Jūsų kodas čia\n",
+    "saraso_ilgis = len(fruits)\n",
+    "print(f\"{saraso_ilgis} vaisiu rusys yra sarase\" )"
    ]
   },
   {
@@ -1161,14 +1257,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True False\n"
+     ]
+    }
+   ],
    "source": [
     "# Maisto produktų sąrašas\n",
     "food_products = [\"obuolys\", \"bananas\", \"vyšnia\", \"datulė\", \"juoduju serbentų uogienė\"]\n",
     "\n",
-    "# Jūsų kodas čia"
+    "# Jūsų kodas čia\n",
+    "rezultatas1 = \"braškė\" not in food_products\n",
+    "print(rezultatas1)\n",
+    "rezultatas2 = \"vyšnia\" not in food_products\n",
+    "print(rezultatas2)\n",
+    "rezultatas3 = \"bananas\" in food_products\n",
+    "rezultatas4 = \"lime\" in food_products\n",
+    "print(rezultatas3, rezultatas4)"
    ]
   }
  ],
