--- a/02_loop_list_tuple_set_dictionary/0202lt_zodynai.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0202lt_zodynai.ipynb
@@ -61,6 +61,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gruodžio 25-26\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sventes['Kaledos'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Kaledos': 'Gruodžio 25-26', 'Nauji Metai': 'Sausio 1', 'Vėlykos': 'Pavasary', 'Joninės': 'Birželio 24'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sventes['Joninės'] = 'Birželio 24'\n",
+    "print(sventes)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,11 +112,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rexas': 5, 'mopsas': 2, 'finik': 8, 'nora': 3}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "augintiniai = {\"rexas\": 5, \"mopsas\": 2, \"finik\": 8, \"nora\": 3}\n",
+    "print(augintiniai)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `Greita užduotis 2: Konkretaus žodyno įrašo pasiekimas`\n",
+    "\n",
+    "**Instrukcijos:**\n",
+    "\n",
+    "1. Atspausdinkite bet kurio gyvūno amžių iš žodyno, sukurto `Greitosios užduoties 1` metu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# jusu kodo vieta\n",
+    "print(augintiniai[\"finik\"])\n"
    ]
   },
   {
@@ -113,43 +187,6 @@
     "zmones = {'Jonas': 24, 'Petras': 32}\n",
     "print(zmones['Petras']) # 32\n",
     "print(zmones['Jonas']) # 24"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gruodžio 25-26\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sventes['Kaledos'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### `Greita užduotis 2: Konkretaus žodyno įrašo pasiekimas`\n",
-    "\n",
-    "**Instrukcijos:**\n",
-    "\n",
-    "1. Atspausdinkite bet kurio gyvūno amžių iš žodyno, sukurto `Greitosios užduoties 1` metu."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# jusu kodo vieta"
    ]
   },
   {
@@ -185,24 +222,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Kaledos': 'Gruodžio 25-26', 'Nauji Metai': 'Sausio 1', 'Vėlykos': 'Pavasary', 'Joninės': 'Birželio 24'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "sventes['Joninės'] = 'Birželio 24'\n",
-    "print(sventes)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,11 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rexas': 5, 'mopsas': 5, 'finik': 8, 'nora': 3, 'Dolce': 3, 'dolce': 3}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "augintiniai[\"dolce\"] = 3\n",
+    "print(augintiniai)"
    ]
   },
   {
@@ -288,11 +317,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rexas': 5, 'mopsas': 5, 'finik': 8, 'nora': 3, 'Dolce': 3, 'dolce': 3}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "augintiniai[\"mopsas\"] += 3\n",
+    "print(augintiniai)"
    ]
   },
   {
@@ -341,11 +380,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rexas': 5, 'mopsas': 5, 'finik': 8, 'nora': 3, 'dolce': 3}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "del augintiniai[\"Dolce\"]\n",
+    "print(augintiniai)"
    ]
   },
   {
@@ -592,11 +641,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([3])\n",
+      "dict_items([('nora', 3)])\n",
+      "3\n",
+      "3\n",
+      "{}\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "zodynas = augintiniai.values()\n",
+    "print(zodynas)\n",
+    "zodynas = augintiniai.items()\n",
+    "print(zodynas)\n",
+    "zodynas = augintiniai.get(\"nora\")\n",
+    "print(zodynas)\n",
+    "zodynas = augintiniai.pop(\"nora\")\n",
+    "print(zodynas)\n",
+    "print(augintiniai)\n",
+    "zodynas = augintiniai.clear()\n",
+    "print(zodynas)\n",
+    "\n"
    ]
   },
   {
