--- a/02_loop_list_tuple_set_dictionary/0203lt_ciklas_for.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0203lt_ciklas_for.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -307,11 +307,8 @@
      "output_type": "stream",
      "text": [
       "bananas 5\n",
-      "vaisiai 18 bendras kiekis\n",
       "apelsinas 3\n",
-      "vaisiai 18 bendras kiekis\n",
-      "mandarinas 10\n",
-      "vaisiai 18 bendras kiekis\n"
+      "mandarinas 10\n"
      ]
     }
    ],
@@ -320,8 +317,26 @@
     "\n",
     "for vaisius, kiekis in vaisiai.items():\n",
     "    print(vaisius, kiekis )\n",
-    "    print(f\"vaisiai\", (5 + 3 + 10),\"bendras kiekis\")\n",
+    "\n",
+    "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vaisiai 18 bendras kiekis\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"vaisiai\", (5 + 3 + 10),\"bendras kiekis\")"
    ]
   },
   {
@@ -397,23 +412,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mango 7\n",
-      "arbuzas 3\n",
-      "greifruktas 5\n"
+      "mango            7\n",
+      "arbuzas          3\n",
+      "greifruktas      5\n"
      ]
     }
    ],
    "source": [
     "vaisiai = {\"mango\": 7, \"arbuzas\": 3, \"greifruktas\": 5}\n",
     "for vaisius, kiekis, in vaisiai.items():\n",
-    "   print(vaisius,kiekis)\n",
+    "   print(f\"{vaisius:12} {kiekis:>5}\")\n",
     "\n",
     "  "
    ]
@@ -465,10 +480,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dabar istorija 251\n",
+      "po pakeitimo istorija 241\n",
+      "Dabar biologija 153\n",
+      "po pakeitimo biologija 143\n",
+      "Dabar matematika 353\n",
+      "po pakeitimo matematika 343\n"
+     ]
+    }
+   ],
+   "source": [
+    "knygos = {\"istorija\": 251, \"biologija\": 153, \"matematika\": 353}\n",
+    "\n",
+    "for knyga in knygos.keys():\n",
+    "    print(\"Dabar\", knyga, knygos[knyga])\n",
+    "    knygos[knyga] -= 10\n",
+    "    print(\"po pakeitimo\", knyga, knygos[knyga])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -514,10 +549,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "skaiciai = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n",
+    "for skaiciai in range(10, 0, -1):\n",
+    "    print(skaiciai)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -573,10 +629,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mango\n",
+      "arbuzas\n",
+      "greifruktas\n",
+      "bananas 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "vaisiai = {\"mango\": 7, \"arbuzas\": 3, \"greifruktas\": 5, \"bananas\": 9, \"obolis\": 0, \"lime\": 13 }\n",
+    "\n",
+    "\n",
+    "for vaisius in vaisiai:\n",
+    "    if vaisius == \"bananas\":\n",
+    "        print(vaisius, vaisiai[vaisius])\n",
+    "        break\n",
+    "    print(vaisius)\n",
+    " \n",
+    "            \n",
+    "\n",
+    "\n",
+    "  \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -629,10 +710,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lime            13\n"
+     ]
+    }
+   ],
+   "source": [
+    "for vaisius, kiekis in vaisiai.items():\n",
+    "    if kiekis <= 10:\n",
+    "        continue\n",
+    "    print(f\"{vaisius:12} {kiekis:>5}\")        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -726,10 +820,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "viskas gerai\n",
+      "viskas gerai\n",
+      "viskas gerai\n",
+      "viskas gerai\n",
+      "viskas gerai\n",
+      "viskas gerai\n"
+     ]
+    }
+   ],
+   "source": [
+    "for vaisius, kiekis in vaisiai.items():\n",
+    "    if not type(kiekis) or kiekis < 0:\n",
+    "        print(f\"{vaisius} vaisiaus kiekis geras\" ) \n",
+    "        print(f\"{kiekis} kiekis blogas\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"viskas gerai\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -777,11 +892,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 zuvis vandenyje\n",
+      "1 sielu keliones\n",
+      "2 pabudimo knyga\n",
+      "3 grybo sapnas\n"
+     ]
+    }
+   ],
    "source": [
     "# jusu kodo vieta\n",
+    "knygos = [\"zuvis vandenyje\", \"sielu keliones\", \"pabudimo knyga\", \"grybo sapnas\"]\n",
+    "for indeksas, knyga in enumerate(knygos):\n",
+    "    print(indeksas, knyga)\n",
     "\n"
    ]
   },
@@ -856,30 +985,6 @@
    "metadata": {},
    "source": [
     "Sukurkite įterptinį `for` ciklą, kuris atspausdintų mokinio vardą ir dalykus su pažymiais."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'mokinio_pazymiai' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# jusu kodo vieta\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m \u001b[43mmokinio_pazymiai\u001b[49m:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m subject \u001b[38;5;129;01min\u001b[39;00m mokinio_pazymiai\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28mprint\u001b[39m(name, subject)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'mokinio_pazymiai' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# jusu kodo vieta\n",
-    "for name in mokinio_pazymiai:\n",
-    "    for subject in mokinio_pazymiai.items():\n",
-    "        print(name, subject)"
    ]
   },
   {
