--- a/02_loop_list_tuple_set_dictionary/0201_answers.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0201_answers.ipynb
@@ -30,9 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kriaušė\n",
+      "ananasas\n",
+      "['bananas', 'vynuogė']\n"
+     ]
+    }
+   ],
    "source": [
     "# Sukurti vaisių sąrašą\n",
     "vaisiai = ['obuolys', 'kriaušė', 'bananas', 'vynuogė', 'ananasas']\n",
@@ -162,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
