Medziagos atnaujinimas 0205lt

--- a/02_loop_list_tuple_set_dictionary/0203lt_ciklas_for.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0203lt_ciklas_for.ipynb
@@ -299,16 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bananas 5\n",
-      "apelsinas 3\n",
-      "mandarinas 10\n"
+      "bananas             5\n",
+      "apelsinas           3\n",
+      "mandarinas         10\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
     "vaisiai = {\"bananas\": 5, \"apelsinas\": 3, \"mandarinas\": 10 }\n",
     "\n",
     "for vaisius, kiekis in vaisiai.items():\n",
-    "    print(vaisius, kiekis )\n",
+    "    print(f\"{vaisius:13} {kiekis:>7}\")\n",
     "\n",
     "\n",
     "    "
@@ -969,15 +969,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alicija pazymis:\n",
+      "Alicija: {'Matematika': 85, 'Mokslas': 92, 'Istorija': 88}\n",
+      "Bobas: {'Matematika': 78, 'Mokslas': 85, 'Istorija': 90}\n",
+      "Charlis: {'Matematika': 92, 'Mokslas': 88, 'Istorija': 76}\n",
+      "Bobas pazymis:\n",
+      "Alicija: {'Matematika': 85, 'Mokslas': 92, 'Istorija': 88}\n",
+      "Bobas: {'Matematika': 78, 'Mokslas': 85, 'Istorija': 90}\n",
+      "Charlis: {'Matematika': 92, 'Mokslas': 88, 'Istorija': 76}\n",
+      "Charlis pazymis:\n",
+      "Alicija: {'Matematika': 85, 'Mokslas': 92, 'Istorija': 88}\n",
+      "Bobas: {'Matematika': 78, 'Mokslas': 85, 'Istorija': 90}\n",
+      "Charlis: {'Matematika': 92, 'Mokslas': 88, 'Istorija': 76}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "mokinio_pazymiai = {\n",
-    "    'Alicija': {'Matematika': 85, 'Mokslas': 92, 'Istorija': 88},\n",
-    "    'Bobas': {'Matematika': 78, 'Mokslas': 85, 'Istorija': 90},\n",
-    "    'Charlis': {'Matematika': 92, 'Mokslas': 88, 'Istorija': 76}\n",
-    "}"
+    "'Alicija': {'Matematika': 85, 'Mokslas': 92, 'Istorija': 88},\n",
+    "'Bobas': {'Matematika': 78, 'Mokslas': 85, 'Istorija': 90},\n",
+    "'Charlis': {'Matematika': 92, 'Mokslas': 88, 'Istorija': 76}\n",
+    " }\n",
+    "for studentas, pazymis in mokinio_pazymiai.items():\n",
+    "    print(f\"{studentas} pazymis:\")\n",
+    "    for dalykas, pazymis in mokinio_pazymiai.items():\n",
+    "        print(f\"{dalykas}: {pazymis}\")\n",
+    "print()\n",
+    "    "
    ]
   },
   {
@@ -1004,13 +1030,6 @@
     "\n",
     "Patarimas: Naudokite `sąrašą`, ciklą `for`, funkcijas `len` ir `index`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
