--- a/02_loop_list_tuple_set_dictionary/0203lt_ciklas_for.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0203lt_ciklas_for.ipynb
@@ -1032,6 +1032,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zodis1:namas, ilgis yra 5\n",
+      "zodis2:krumas, ilgis yra 6\n",
+      "zodis3:soliukas, ilgis yra 8\n",
+      "zodis4:stalas, ilgis yra 6\n",
+      "zodis5:miskas, ilgis yra 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "zodziai = []\n",
+    "for i in range(1,6):\n",
+    "    vartotojo_ivedimas = input(\"iveskyte zodi: \")\n",
+    "    zodziai.append(vartotojo_ivedimas)\n",
+    "\n",
+    "for i in range(len(zodziai)):\n",
+    "    zodis = zodziai[i]\n",
+    "    print(f\"zodis{i + 1}:{zodis}, ilgis yra {len(zodis)}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1044,10 +1072,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1904\n",
+      "1908\n",
+      "1912\n",
+      "1916\n",
+      "1920\n",
+      "1924\n",
+      "1928\n",
+      "1932\n",
+      "1936\n",
+      "1940\n",
+      "1944\n",
+      "1948\n",
+      "1952\n",
+      "1956\n",
+      "1960\n",
+      "1964\n",
+      "1968\n",
+      "1972\n",
+      "1976\n",
+      "1980\n",
+      "1984\n",
+      "1988\n",
+      "1992\n",
+      "1996\n",
+      "2000\n",
+      "2004\n",
+      "2008\n",
+      "2012\n",
+      "2016\n",
+      "2020\n",
+      "2024\n",
+      "2028\n",
+      "2032\n",
+      "2036\n",
+      "2040\n",
+      "2044\n",
+      "2048\n",
+      "2052\n",
+      "2056\n",
+      "2060\n",
+      "2064\n",
+      "2068\n",
+      "2072\n",
+      "2076\n",
+      "2080\n",
+      "2084\n",
+      "2088\n",
+      "2092\n",
+      "2096\n"
+     ]
+    }
+   ],
+   "source": [
+    "keliamieji_metai = range(1900, 2100 )\n",
+    "for metai in keliamieji_metai:\n",
+    "    if metai % 4 == 0 and metai % 100 != 0 or metai % 400 == 0:\n",
+    "        print(metai)"
+   ]
   }
  ],
  "metadata": {
