--- a/02_loop_list_tuple_set_dictionary/0204lt_ciklas_while.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0204lt_ciklas_while.ipynb
@@ -366,11 +366,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Klaida, liko 2 bandymai\n",
+      "Klaida, liko 1 bandymai\n",
+      "Klaida, liko 0 bandymai\n",
+      "Perdaug bandymu, see you later\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "slaptazodis = 8520\n",
+    "bandymai = 3\n",
+    "\n",
+    "\n",
+    "while bandymai > 0:\n",
+    "    atsakymas = input(\"iveskyte slaptazodis: \")\n",
+    "    if atsakymas != slaptazodis:\n",
+    "        bandymai -= 1\n",
+    "        print(f\"Klaida, liko {bandymai} bandymai\")\n",
+    "    else:\n",
+    "        print(\"Klaida!\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"Perdaug bandymu, see you later\")"
    ]
   },
   {
@@ -396,11 +421,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calculator reade!\n",
+      "          comand:\n",
+      "                \"+\"| iveskyte du skaicius\n",
+      "                \"-\"| iveskyte du skiacius\n",
+      "                \"*\"| iveskyte du skaicius\n",
+      "                \"/\"| iveskyte du skaicius\n",
+      "                 exit\n",
+      "                      \n",
+      "calculator reade!\n",
+      "          comand:\n",
+      "                \"+\"| iveskyte du skaicius\n",
+      "                \"-\"| iveskyte du skiacius\n",
+      "                \"*\"| iveskyte du skaicius\n",
+      "                \"/\"| iveskyte du skaicius\n",
+      "                 exit\n",
+      "                      \n",
+      "calculator reade!\n",
+      "          comand:\n",
+      "                \"+\"| iveskyte du skaicius\n",
+      "                \"-\"| iveskyte du skiacius\n",
+      "                \"*\"| iveskyte du skaicius\n",
+      "                \"/\"| iveskyte du skaicius\n",
+      "                 exit\n",
+      "                      \n",
+      "<IPython.core.autocall.ZMQExitAutocall object at 0x00000227EDF746B0> the end: \n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "while True:\n",
+    "    print(\"\"\"calculator reade!\n",
+    "          comand:\n",
+    "                \"+\"| iveskyte du skaicius\n",
+    "                \"-\"| iveskyte du skiacius\n",
+    "                \"*\"| iveskyte du skaicius\n",
+    "                \"/\"| iveskyte du skaicius\n",
+    "                 exit\n",
+    "                      \"\"\")\n",
+    "    command = input(\"enter comand: \")\n",
+    "    if command == \"+\":\n",
+    "       numeris1 = float(input(\"iveskyte num_1\"))\n",
+    "       numeris2 = float(input(\"iveskyte num_2\"))\n",
+    "       print(f\"rezultatas, {numeris1 + numeris2}\")\n",
+    "    elif command == \"*\":\n",
+    "       numeris1 = float(input(\"iveskyte num_1\"))\n",
+    "       numeris2 = float(input(\"iveskyte num_2\"))\n",
+    "       print(f\"rezultatas, {numeris1 + numeris2}\")\n",
+    "    \n",
+    "    elif command == \"exit\":\n",
+    "       print(f\"{exit} the end: \")\n",
+    "       break\n",
+    "else:\n",
+    "    print(\"the end\")\n",
+    "\n",
+    "    \n",
+    "        \n"
    ]
   }
  ],
