--- a/02_loop_list_tuple_set_dictionary/0205answers.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0205answers.ipynb
@@ -156,9 +156,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 'for' loop:\n",
+      "January\n",
+      "February\n",
+      "March\n",
+      "April\n",
+      "May\n",
+      "June\n",
+      "July\n",
+      "August\n",
+      "September\n",
+      "October\n",
+      "November\n",
+      "December\n",
+      "\n",
+      "Using 'while' loop:\n",
+      "January\n",
+      "February\n",
+      "March\n",
+      "April\n",
+      "May\n",
+      "June\n",
+      "July\n",
+      "August\n",
+      "September\n",
+      "October\n",
+      "November\n",
+      "December\n",
+      "\n",
+      "Length of the 'months' tuple: 12\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Create a tuple named 'months' with the names of the months\n",
     "months = ('January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December')\n",
@@ -188,9 +224,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of elements removed: 2\n",
+      "Sum of numeric values: 13.5\n",
+      "String Lengths: (5, 6, 6)\n",
+      "\n",
+      "Data Dictionary:\n",
+      "original_tuple: (5, 'apple', [1, 2, 3], 'banana', 8.5, 'cherry')\n",
+      "modified_list: ['apple', [1, 2, 3], 'banana', 8.5]\n",
+      "new_tuple: ('apple', [1, 2, 3], 'banana', 8.5)\n",
+      "numeric_tuple: (5, 8.5)\n",
+      "string_length_tuple: (5, 6, 6)\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Create a tuple named 'original_tuple' with a mix of data types\n",
     "original_tuple = (5, 'apple', [1, 2, 3], 'banana', 8.5, 'cherry')\n",
@@ -254,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
