--- a/02_loop_list_tuple_set_dictionary/0205lt_tuple.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0205lt_tuple.ipynb
@@ -95,11 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('melyna', 'raudona', 'zalia', 'oranzine', 'geltona')\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "spalvu_tuple = ('melyna', 'raudona', 'zalia', 'oranzine', 'geltona')\n",
+    "print(spalvu_tuple)"
    ]
   },
   {
@@ -156,11 +166,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oranzine\n",
+      "viktorija\n",
+      "38\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "tupla_pavadinimai = ('viktorija', '38', 'oranzine')\n",
+    "print(tupla_pavadinimai[-1])\n",
+    "print(tupla_pavadinimai[0])\n",
+    "print(tupla_pavadinimai[1])"
    ]
   },
   {
@@ -233,11 +257,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('pirmadienis', 'antradienis', 'treciadienis', 'ketvirtadienis', 'penktadienis')\n",
+      "('sestadienis', 'sekmadienis')\n",
+      "('pirmadienis', 'antradienis', 'treciadienis')\n",
+      "('penktadienis', 'sestadienis', 'sekmadienis')\n",
+      "('sekmadienis', 'sestadienis', 'penktadienis', 'ketvirtadienis', 'treciadienis', 'antradienis', 'pirmadienis')\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "savaites_dienos = ('pirmadienis', 'antradienis', 'treciadienis', 'ketvirtadienis', 'penktadienis', 'sestadienis', 'sekmadienis')\n",
+    "print(savaites_dienos[:5])\n",
+    "print(savaites_dienos[5:7])\n",
+    "print(savaites_dienos[0:3])\n",
+    "print(savaites_dienos[4:7])\n",
+    "print(savaites_dienos[::-1])"
    ]
   },
   {
@@ -296,11 +338,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('ananasas', 'bananas', 'kriause', 'melyna', 'oranzine', 'ruda', '3', '5', '8')\n",
+      "('melyna', 'oranzine', 'ruda')\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "vaisiu_tuple = ('ananasas', 'bananas', 'kriause')\n",
+    "spalvu_tuple = ('melyna', 'oranzine', 'ruda')\n",
+    "kiekio_tuple = ('3', '5', '8')\n",
+    "inventorius = vaisiu_tuple + spalvu_tuple + kiekio_tuple\n",
+    "print(inventorius)\n",
+    "print(inventorius[3:6])"
    ]
   },
   {
@@ -388,11 +445,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "6\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "numbers_tuple = ('1', '1', '2', '5', '5', '3', '4', '6', '6')\n",
+    "print(numbers_tuple.count('3'))\n",
+    "print(numbers_tuple.index('4'))\n",
+    "print('6' in numbers_tuple)"
    ]
   },
   {
@@ -413,9 +484,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "obuolys\n",
+      "bananas\n",
+      "vyšnia\n",
+      "datulė\n"
+     ]
+    }
+   ],
    "source": [
     "vaisių_tuplas = ('obuolys', 'bananas', 'vyšnia', 'datulė')\n",
     "\n",
@@ -433,9 +515,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "obuolys\n",
+      "bananas\n",
+      "vyšnia\n",
+      "datulė\n"
+     ]
+    }
+   ],
    "source": [
     "vaisių_tuplas = ('obuolys', 'bananas', 'vyšnia', 'datulė')\n",
     "\n",
@@ -471,11 +564,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sausis\n",
+      "vasaris\n",
+      "kovas\n",
+      "balandis\n",
+      "geguze\n",
+      "birzelis\n",
+      "liepa\n",
+      "rugpjutis\n",
+      "rugsejis\n",
+      "spalis\n",
+      "lapkritis\n",
+      "gruodis\n",
+      "metuose 12 menesiu\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "#1\n",
+    "menesiu_tuple = ('sausis', 'vasaris', 'kovas', 'balandis', 'geguze', 'birzelis', 'liepa', 'rugpjutis', 'rugsejis', 'spalis', 'lapkritis', 'gruodis')\n",
+    "#2\n",
+    "for menesis in menesiu_tuple:\n",
+    "    print(menesis)\n",
+    "#3\n",
+    "print('metuose', len(menesiu_tuple), 'menesiu')"
    ]
   },
   {
@@ -509,11 +629,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "istrauktu elementu skaicius 0\n",
+      "19.8\n",
+      "(7, 1, 4, 8, 4)\n",
+      "\n",
+      " duomenu_zodinas\n",
+      "prasomas_tuplas: (7, 'bananas', 'w', 'uoga', 'dviratis', 12.8, [1, 5, 7, 9, 58], 'lime')\n",
+      "modifikuotas_sarasas: ['bananas', 'w', 'uoga', 'dviratis', 12.8, [1, 5, 7, 9, 58]]\n",
+      "naujas_tuple: ('bananas', 'w', 'uoga', 'dviratis', 12.8, [1, 5, 7, 9, 58])\n",
+      "istraukti_elementai: 0\n",
+      "skaiciu_tuple: 19.8\n",
+      "teksto_ilgiai_tuple: (7, 1, 4, 8, 4)\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "#1\n",
+    "prasomas_tuplas = (7, 'bananas', 'w', \"uoga\" , 'dviratis',  12.8, [1,5,7,9,58], 'lime')\n",
+    "#2\n",
+    "modifikuotas_sarasas = list(prasomas_tuplas)\n",
+    "#3\n",
+    "modifikuotas_sarasas.pop(0)\n",
+    "modifikuotas_sarasas.pop(-1)\n",
+    "#4\n",
+    "naujas_tuple = tuple(modifikuotas_sarasas)\n",
+    "#5\n",
+    "istraukti_elementai = len(modifikuotas_sarasas) - len(naujas_tuple)\n",
+    "print('istrauktu elementu skaicius', istraukti_elementai)\n",
+    "#6\n",
+    "skaiciu_tuple = tuple(skaicius for skaicius in prasomas_tuplas if isinstance(skaicius, (int, float)))\n",
+    "#7\n",
+    "skaiciu_tuple = sum(skaiciu_tuple)\n",
+    "print(skaiciu_tuple)\n",
+    "#8\n",
+    "teksto_ilgiai_tuple = tuple(len(item) for item in prasomas_tuplas if isinstance(item, str))\n",
+    "#9\n",
+    "print(teksto_ilgiai_tuple)\n",
+    "#10\n",
+    "duomenu_zodinas = {  \n",
+    "    'prasomas_tuplas': prasomas_tuplas,\n",
+    "    'modifikuotas_sarasas' : modifikuotas_sarasas,\n",
+    "    'naujas_tuple': naujas_tuple,\n",
+    "    'istraukti_elementai': istraukti_elementai,\n",
+    "    'skaiciu_tuple': skaiciu_tuple,\n",
+    "    'teksto_ilgiai_tuple': teksto_ilgiai_tuple   }\n",
+    "\n",
+    "print('\\n duomenu_zodinas')\n",
+    "for raktas, verte in duomenu_zodinas.items():\n",
+    "    print(f\"{raktas}: {verte}\")\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -533,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
