--- a/02_loop_list_tuple_set_dictionary/0206lt_aibes.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0206lt_aibes.ipynb
@@ -76,11 +76,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 8}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "aibe = {1,3,5,8}\n",
+    "aibe.add(2)\n",
+    "aibe.add(4)\n",
+    "aibe.add(6)\n",
+    "print(aibe)"
    ]
   },
   {
@@ -124,11 +137,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "aibe = {1, 2, 3, 4, 5,}\n",
+    "sarasas = {5, 6, 7, 8, 9, 10}\n",
+    "aibe.update(sarasas)\n",
+    "print(aibe)"
    ]
   },
   {
@@ -186,11 +211,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 5, 7, 9}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "mano_aibe = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n",
+    "mano_aibe.remove(2)\n",
+    "mano_aibe.remove(4)\n",
+    "mano_aibe.remove(6)\n",
+    "mano_aibe.discard(8)\n",
+    "mano_aibe.discard(10)\n",
+    "mano_aibe.discard(13)\n",
+    "print(mano_aibe)"
    ]
   },
   {
@@ -204,9 +245,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 9, 11, 51, -5}\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "aibe = {51, -5, 0, 1, 2, 3, 4, 5, 9, 11}\n",
     "elementas = aibe.pop()\n",
@@ -225,11 +275,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 5, 7, 9, 11, 13, -1}\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "mano_aibe = {13, 11, 9, 7, 5, 3, 1, -1}\n",
+    "elementas = mano_aibe.pop()\n",
+    "print(mano_aibe)\n",
+    "print(elementas)"
    ]
   },
   {
@@ -243,9 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "aibe = {1, 2, 3}\n",
     "aibe.clear()\n",
@@ -261,9 +332,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4, 5} {1, 2, 3}\n"
+     ]
+    }
+   ],
    "source": [
     "aibe = {1, 2, 3}\n",
     "kopija = aibe.copy()\n",
@@ -280,9 +359,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5} {1, 2, 3} {3, 4, 5}\n"
+     ]
+    }
+   ],
    "source": [
     "aibe1 = {1, 2, 3}\n",
     "aibe2 = {3, 4, 5}\n",
@@ -299,9 +386,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 5}\n"
+     ]
+    }
+   ],
    "source": [
     "aibe1 = {1, 2, 3, 5}\n",
     "aibe2 = {3, 4, 5, 2}\n",
@@ -324,11 +419,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9} {1, 2, 3, 4, 5, 6} {4, 5, 6, 7, 8, 9}\n",
+      "{4, 5, 6}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "#1\n",
+    "aibe1 = {1,2,3,4,5,6}\n",
+    "aibe2 = {6,7,8,9,5,4}\n",
+    "aibe3 = aibe1.union(aibe2)\n",
+    "print(aibe3, aibe1, aibe2)\n",
+    "#2\n",
+    "aibe4 =aibe1.intersection(aibe2)\n",
+    "print(aibe4)\n",
+    "\n"
    ]
   },
   {
@@ -367,11 +480,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 5}\n",
+      "{8, 2}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "mano_aibe1 = {1,3,5,7}\n",
+    "mano_aibe2 = {2,3,7,8}\n",
+    "print(mano_aibe1.difference(mano_aibe2))\n",
+    "print(mano_aibe2.difference(mano_aibe1))\n"
    ]
   },
   {
@@ -410,11 +536,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 5, 8}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "mano_aibe1 = {1,3,5,7}\n",
+    "mano_aibe2 = {2,3,7,8}\n",
+    "\n",
+    "sym_skirtumas = mano_aibe1.symmetric_difference(mano_aibe2)\n",
+    "print(sym_skirtumas)"
    ]
   },
   {
@@ -485,11 +624,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "{5}\n",
+      "{1, 2, 3, 4}\n",
+      "{1, 2, 3, 4, 6, 7, 8, 9}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "mano_aibe5 = {1,2,3,4,5}\n",
+    "mano_aibe6 = {5,6,7,8,9}\n",
+    "\n",
+    "sujungimas = mano_aibe5 | mano_aibe6\n",
+    "print(sujungimas)\n",
+    "\n",
+    "sankirta = mano_aibe5 & mano_aibe6\n",
+    "print(sankirta)\n",
+    "\n",
+    "skirtumas = mano_aibe5 - mano_aibe6\n",
+    "print(skirtumas)\n",
+    "\n",
+    "simetrinis_skirtumas = mano_aibe5 ^ mano_aibe6\n",
+    "print(simetrinis_skirtumas)\n"
    ]
   },
   {
@@ -507,9 +671,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "aibe = {1, 2, 3}\n",
     "for elementas in aibe:\n",
@@ -551,9 +725,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Nauji Metai', 'Kaledos', 'Jonines'}\n",
+      "{'Sausio 1', 'Gruodzio 25-26', 'Birzelio 24'}\n"
+     ]
+    }
+   ],
    "source": [
     "sventes = {\n",
     "    'Kaledos': 'Gruodzio 25-26',\n",
@@ -579,11 +762,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aibės elementai kvadratu: {1, 36, 9, 49, 25}\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "set1 = {1, 3, 5, 7, 6}\n",
+    "set2 = set()\n",
+    "for number in set1:\n",
+    "    set2.add(number ** 2)\n",
+    "print('aibės elementai kvadratu:', set2)"
    ]
   },
   {
@@ -616,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
